# jawa-analyzer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
crates/base-db/: Cargo.toml
crates/base-db/src/: input.rs  lib.rs  path_resolver.rs  syntax_error.rs  workspace.rs
crates/caffeine-ls/: Cargo.toml
crates/caffeine-ls/src/: config.rs  from_proto.rs  global_state.rs  jdk.rs  lib.rs  lsp.rs  project_model.rs
crates/caffeine-ls/src/handlers/: notification.rs  request.rs
crates/caffeine-ls/src/lsp/: backend.rs  capabilities.rs  convert.rs  diagnostics.rs  worker.rs
crates/caffeine-ls/src/project_model/: jdk_indexer.rs
crates/caffeine-ls/tests/: lsp_snapshots.rs
crates/caffeine-ls/tests/snapshots/: lsp_snapshots__unclosed_block.snap
crates/hir/: Cargo.toml
crates/hir/src/: bytecode.rs  lib.rs
crates/hir/src/bytecode/: sig.rs
crates/index/: Cargo.toml
crates/index/src/: lexical.rs  lib.rs  symbol.rs
crates/java-syntax/: Cargo.toml
crates/java-syntax/src/: incremental.rs  kinds.rs  lexer.rs  lib.rs  parser.rs  reader.rs  syntax_kind.rs
crates/java-syntax/src/lexer/: identifier.rs  token.rs
crates/java-syntax/src/parser/: grammar.rs  marker.rs  reader.rs  sink.rs
crates/java-syntax/src/snapshots/: java_parser__lexer__tests__boolean_and_null_literals.snap  java_parser__lexer__tests__char_literals.snap  java_parser__lexer__tests__comment_termination_variants-2.snap  java_parser__lexer__tests__comment_termination_variants-3.snap  java_parser__lexer__tests__comment_termination_variants.snap  java_parser__lexer__tests__comments-2.snap  java_parser__lexer__tests__comments-3.snap  java_parser__lexer__tests__comments.snap  java_parser__lexer__tests__complex_jls_scenario.snap  java_parser__lexer__tests__empty_and_whitespace-2.snap  java_parser__lexer__tests__escape_sequence_s-2.snap  java_parser__lexer__tests__escape_sequence_s.snap  java_parser__lexer__tests__floating_point_literals-2.snap  java_parser__lexer__tests__floating_point_literals.snap  java_parser__lexer__tests__integer_literals-2.snap  java_parser__lexer__tests__integer_literals-3.snap  java_parser__lexer__tests__integer_literals.snap  java_parser__lexer__tests__javadoc.snap  java_parser__lexer__tests__keywords_and_identifiers-2.snap  java_parser__lexer__tests__keywords_and_identifiers-3.snap  java_parser__lexer__tests__keywords_and_identifiers.snap  java_parser__lexer__tests__operators.snap  java_parser__lexer__tests__separators.snap  java_parser__lexer__tests__special_characters_and_bom-2.snap  java_parser__lexer__tests__special_characters_and_bom-3.snap  java_parser__lexer__tests__special_characters_and_bom.snap  java_parser__lexer__tests__string_literals.snap  java_parser__lexer__tests__string_template_features-2.snap  java_parser__lexer__tests__string_template_features-3.snap  java_parser__lexer__tests__string_template_features-4.snap  java_parser__lexer__tests__string_template_features.snap  java_parser__lexer__tests__text_block_template.snap  java_parser__lexer__tests__text_blocks.snap  java_parser__lexer__tests__unicode_escape_in_strings-2.snap  java_parser__lexer__tests__unicode_escapes-2.snap  java_parser__lexer__tests__unicode_escapes-3.snap  java_parser__lexer__tests__unicode_escapes-4.snap  java_parser__lexer__tests__unicode_escapes.snap
crates/java-syntax/tests/: common.rs  event_snapshots.rs  incremental_snapshots.rs  lexer_snapshots.rs  parser.rs  parser_events.rs  parser_snapshots.rs
crates/java-syntax/tests/snapshots/: event_snapshots__event_class_with_field.snap  event_snapshots__event_class_with_method.snap  event_snapshots__event_empty_class.snap  event_snapshots__event_empty_record.snap  event_snapshots__event_enum_with_members.snap  event_snapshots__event_interface_with_default_method.snap  event_snapshots__event_multiline_class.snap  event_snapshots__event_nested_wildcard_type_argument.snap  event_snapshots__event_recovery_missing_member_name.snap  event_snapshots__event_type_parameters_class.snap  incremental_snapshots__boundary_break_brace.snap  incremental_snapshots__boundary_cross_nodes.snap  incremental_snapshots__boundary_touch_left.snap  incremental_snapshots__delete_annotation.snap  incremental_snapshots__insert_field.snap  incremental_snapshots__kind_annotation_body.snap  incremental_snapshots__kind_array_initializer.snap  incremental_snapshots__kind_block.snap  incremental_snapshots__kind_class_body.snap  incremental_snapshots__kind_enum_body.snap  incremental_snapshots__kind_interface_body.snap  incremental_snapshots__kind_module_body.snap  incremental_snapshots__kind_record_body.snap  incremental_snapshots__kind_root_fallback.snap  incremental_snapshots__kind_switch_block.snap  incremental_snapshots__replace_method_name.snap  incremental_snapshots__test_utf8_offset.snap  lexer_snapshots__lex_block_comment_only.snap  lexer_snapshots__lex_bom.snap  lexer_snapshots__lex_boolean_and_null_literals.snap  lexer_snapshots__lex_char_literals.snap  lexer_snapshots__lex_comment_termination_cr.snap  lexer_snapshots__lex_comment_termination_crlf.snap  lexer_snapshots__lex_comment_termination_unicode_line_break.snap  lexer_snapshots__lex_comments_in_code.snap  lexer_snapshots__lex_complex_jls_scenario.snap  lexer_snapshots__lex_empty.snap  lexer_snapshots__lex_eof_sub_character.snap  lexer_snapshots__lex_error_invalid_char_empty.snap  (+187 more)
crates/kotlin-syntax/: Cargo.toml
crates/kotlin-syntax/src/: lexer.rs  lib.rs  parser.rs  syntax_kind.rs
crates/kotlin-syntax/tests/: common.rs  lexer_snapshots.rs
crates/lsp-test/: Cargo.toml
crates/lsp-test/src/: fixture.rs  lib.rs  macros.rs
crates/project-model/: Cargo.toml
crates/project-model/src/: build_system.rs  gradle.rs  lib.rs  workspace.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: lib.rs  loader.rs  virtual_path.rs
lib/rust-asm/: Cargo.toml  README.md
lib/rust-asm/src/: class_reader.rs  class_writer.rs  constant_pool.rs  constants.rs  insn.rs  lib.rs  macros.rs  nodes.rs  opcodes.rs  types.rs
xtask/: Cargo.toml
xtask/src/: args.rs  development.rs  main.rs  prepare.rs  tree.rs
(+245 files in other folders)
