[workspace]
resolver = "3"
members = ["crates/*", "lib/*", "xtask/"]

[workspace.dependencies]
base-db = { path = "./crates/base-db/" }
ide-db = { path = "./crates/ide-db/" }
ide = { path = "./crates/ide/" }
hir = { path = "./crates/hir/" }
java-syntax = { path = "./crates/java-syntax/" }
rust-asm = { path = "./lib/rust-asm/" }
lsp-test = { path = "./crates/lsp-test/" }

lsp-server = "0.7.9"
lsp-types = { version = "=0.95.1", features = ["proposed"] }
vfs = { package = "ra_ap_vfs", version = "0.0.331" }
vfs-notify = { package = "ra_ap_vfs-notify", version = "0.0.331" }
line-index = { package = "ra_ap_line-index", version = "0.0.17" }
bytes = "1.11.1"
zip = "8.6.0"
jimage-rs = "0.0.4"
indoc = "2.0"
insta = "1.47.2"
anyhow = "1"
salsa = "0.26.1"
stacksafe = "1.0"
smallvec = "1.15.1"
tracing = "0.1"
rowan = "0.16.1"
triomphe = "0.1.15"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap = "6"
unicode_categories = "0.1"
rayon = "1.12"
indicatif = "0.18.4"
walkdir = "2.5.0"
clap = "4"
rustc-hash = "2.1.2"
parking_lot = "0.12"
thiserror = "2"
serde = "1.0"
serde_json = "1.0"
smol_str = { version = "0.3.6", features = ["serde"] }
indexmap = "2.14.0"
