[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
xshell = "0.2.7"

java-syntax = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rayon = { workspace = true }
indicatif = { workspace = true }
walkdir = { workspace = true }
