[package]
name = "base-db"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
rowan.workspace = true
smol_str.workspace = true
vfs.workspace = true
dashmap.workspace = true
salsa.workspace = true
rustc-hash.workspace = true
triomphe.workspace = true

java-syntax.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
