[package]
name = "caffeine-ls"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "caffine-ls"
path = "src/bin/main.rs"

[dependencies]
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "sync",
  "time",
] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
ra_ap_line-index = "0.0.17"
arc-swap = "1.9.1"
rayon = { workspace = true }
itertools = "0.14.0"
cfg-if = "1.0"
tower-lsp = "0.20.0"
mimalloc = { version = "0.1.50", default-features = false, optional = true }

vfs.workspace = true
triomphe.workspace = true
ide-db.workspace = true
base-db.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.6.1", package = "tikv-jemallocator", optional = true }

[features]
jemalloc = ["jemallocator"]
