[package]
name = "caffeine-ls"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "caffeine-ls"
path = "src/bin/main.rs"

[dependencies]
anyhow.workspace = true
rowan.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
line-index.workspace = true
bytes.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
camino = "1.2.2"
crossbeam-channel = "0.5.15"
arc-swap = "1.9.1"
itertools = "0.14.0"
cfg-if = "1.0"
threadpool = "1.8.1"
num_cpus = "1.17.0"
zip.workspace = true
jimage-rs.workspace = true
mimalloc = { version = "0.1.50", default-features = false, optional = true }

vfs.workspace = true
vfs-notify.workspace = true
triomphe.workspace = true
ide-db.workspace = true
base-db.workspace = true
ide.workspace = true
hir.workspace = true

[dev-dependencies]
insta = { workspace = true, features = ["json"] }
lsp-test.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Threading",
] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.6.1", package = "tikv-jemallocator", optional = true }

[features]
jemalloc = ["jemallocator"]
