[package]
name = "hir"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
dashmap.workspace = true
rustc-hash.workspace = true
base-db.workspace = true
salsa.workspace = true
smol_str.workspace = true
vfs.workspace = true
triomphe.workspace = true
serde.workspace = true
rust-asm.workspace = true
