[package]
name = "java-syntax"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
drop_bomb = "0.1.5"
derive_more = { version = "2.1.1", features = ["display"] }
unicode-general-category = "1.1.0"
rowan = { workspace = true }
smallvec = { workspace = true }
stacksafe = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
indoc = { workspace = true }
