[package]
name = "java-syntax"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
drop_bomb.workspace = true
derive_more = { version = "2.1.1", features = ["display"] }
unicode-general-category.workspace = true
rowan = { workspace = true }
smallvec = { workspace = true }
stacksafe = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
indoc = { workspace = true }
