[package]
name = "kotlin-syntax"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
rowan.workspace = true
derive_more = { version = "2.1.1", features = ["display"] }
unicode-general-category.workspace = true
drop_bomb.workspace = true

[dev-dependencies]
insta.workspace = true
indoc.workspace = true
