[package]
name = "project-model"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
vfs.workspace = true
index.workspace = true

anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
tempfile = "3.27.0"
smol_str.workspace = true
triomphe.workspace = true
rustc-hash.workspace = true
