[package]
name = "vfs"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
rustc-hash.workspace = true
crossbeam-channel.workspace = true
jimage-rs.workspace = true
parking_lot.workspace = true
zip.workspace = true
tracing.workspace = true
camino.workspace = true
url = "2.5.8"
notify-debouncer-mini = "0.7"
moka = { version = "0.12.15", features = ["sync"] }
